@@ -6,7 +6,6 @@ import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.Arrays;
 import java.util.Base64;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
@@ -27,6 +26,7 @@ import com.arjuna.common.internal.util.propertyservice.BeanPopulator;
 import com.arjuna.common.util.propertyservice.PropertiesFactory;
 
 import io.quarkus.datasource.common.runtime.DataSourceUtil;
+import io.quarkus.runtime.RuntimeValue;
 import io.quarkus.runtime.ShutdownContext;
 import io.quarkus.runtime.annotations.Recorder;
 import io.quarkus.runtime.configuration.ConfigurationException;
@@ -40,23 +40,28 @@ public class NarayanaJtaRecorder {
 
     private static final Logger log = Logger.getLogger(NarayanaJtaRecorder.class);
 
-    public void setNodeName(final TransactionManagerConfiguration transactions) {
+    private final RuntimeValue<TransactionManagerConfiguration> transactions;
 
+    public NarayanaJtaRecorder(final RuntimeValue<TransactionManagerConfiguration> transactions) {
+        this.transactions = transactions;
+    }
+
+    public void setNodeName() {
         try {
-            if (transactions.nodeName.getBytes(StandardCharsets.UTF_8).length > 28
-                    && transactions.shortenNodeNameIfNecessary) {
-                shortenNodeName(transactions);
+            String nodeName = transactions.getValue().nodeName();
+            if (nodeName.getBytes(StandardCharsets.UTF_8).length > 28
+                    && transactions.getValue().shortenNodeNameIfNecessary()) {
+                nodeName = shortenNodeName(transactions.getValue().nodeName());
             }
-            arjPropertyManager.getCoreEnvironmentBean().setNodeIdentifier(transactions.nodeName);
-            jtaPropertyManager.getJTAEnvironmentBean().setXaRecoveryNodes(Collections.singletonList(transactions.nodeName));
-            TxControl.setXANodeName(transactions.nodeName);
+            arjPropertyManager.getCoreEnvironmentBean().setNodeIdentifier(nodeName);
+            jtaPropertyManager.getJTAEnvironmentBean().setXaRecoveryNodes(List.of(nodeName));
+            TxControl.setXANodeName(nodeName);
         } catch (CoreEnvironmentBeanException | NoSuchAlgorithmException e) {
             log.error("Could not set node name", e);
         }
     }
 
-    private static void shortenNodeName(TransactionManagerConfiguration transactions) throws NoSuchAlgorithmException {
-        String originalNodeName = transactions.nodeName;
+    String shortenNodeName(String originalNodeName) throws NoSuchAlgorithmException {
         log.warnf("Node name \"%s\" is longer than 28 bytes, shortening it by using %s.", originalNodeName,
                 HASH_ALGORITHM_FOR_SHORTENING);
         final byte[] nodeNameAsBytes = originalNodeName.getBytes();
@@ -69,8 +74,9 @@ public class NarayanaJtaRecorder {
         //truncate the array
         byte[] slice = Arrays.copyOfRange(base64Result, 0, 28);
 
-        transactions.nodeName = new String(slice, StandardCharsets.UTF_8);
-        log.warnf("New node name is \"%s\"", transactions.nodeName);
+        String shorterNodeName = new String(slice, StandardCharsets.UTF_8);
+        log.warnf("New node name is \"%s\"", shorterNodeName);
+        return shorterNodeName;
     }
 
     public void setDefaultProperties(Properties properties) {
@@ -90,10 +96,10 @@ public class NarayanaJtaRecorder {
         defaultProperties = properties;
     }
 
-    public void setDefaultTimeout(TransactionManagerConfiguration transactions) {
+    public void setDefaultTimeout() {
         arjPropertyManager.getCoordinatorEnvironmentBean()
-                .setDefaultTimeout((int) transactions.defaultTransactionTimeout.getSeconds());
-        TxControl.setDefaultTimeout((int) transactions.defaultTransactionTimeout.getSeconds());
+                .setDefaultTimeout((int) transactions.getValue().defaultTransactionTimeout().getSeconds());
+        TxControl.setDefaultTimeout((int) transactions.getValue().defaultTransactionTimeout().getSeconds());
     }
 
     public static Properties getDefaultProperties() {
@@ -105,19 +111,19 @@ public class NarayanaJtaRecorder {
                 .setTransactionStatusManagerEnable(false);
     }
 
-    public void setConfig(final TransactionManagerConfiguration transactions) {
+    public void setConfig() {
         List<String> objectStores = Arrays.asList(null, "communicationStore", "stateStore");
-        if (transactions.objectStore.type.equals(ObjectStoreType.File_System)) {
-            objectStores.forEach(name -> setObjectStoreDir(name, transactions));
-        } else if (transactions.objectStore.type.equals(ObjectStoreType.JDBC)) {
-            objectStores.forEach(name -> setJDBCObjectStore(name, transactions));
+        if (transactions.getValue().objectStore().type().equals(ObjectStoreType.File_System)) {
+            objectStores.forEach(name -> setObjectStoreDir(name, transactions.getValue()));
+        } else if (transactions.getValue().objectStore().type().equals(ObjectStoreType.JDBC)) {
+            objectStores.forEach(name -> setJDBCObjectStore(name, transactions.getValue()));
         }
         BeanPopulator.getDefaultInstance(RecoveryEnvironmentBean.class)
-                .setRecoveryModuleClassNames(transactions.recoveryModules);
+                .setRecoveryModuleClassNames(transactions.getValue().recoveryModules());
         BeanPopulator.getDefaultInstance(RecoveryEnvironmentBean.class)
-                .setExpiryScannerClassNames(transactions.expiryScanners);
+                .setExpiryScannerClassNames(transactions.getValue().expiryScanners());
         BeanPopulator.getDefaultInstance(JTAEnvironmentBean.class)
-                .setXaResourceOrphanFilterClassNames(transactions.xaResourceOrphanFilters);
+                .setXaResourceOrphanFilterClassNames(transactions.getValue().xaResourceOrphanFilters());
     }
 
     /**
@@ -145,25 +151,25 @@ public class NarayanaJtaRecorder {
     }
 
     private void setObjectStoreDir(String name, TransactionManagerConfiguration config) {
-        BeanPopulator.getNamedInstance(ObjectStoreEnvironmentBean.class, name).setObjectStoreDir(config.objectStore.directory);
+        BeanPopulator.getNamedInstance(ObjectStoreEnvironmentBean.class, name)
+                .setObjectStoreDir(config.objectStore().directory());
     }
 
     private void setJDBCObjectStore(String name, TransactionManagerConfiguration config) {
         final ObjectStoreEnvironmentBean instance = BeanPopulator.getNamedInstance(ObjectStoreEnvironmentBean.class, name);
         instance.setObjectStoreType(JDBCStore.class.getName());
-        instance.setJdbcDataSource(new QuarkusDataSource(config.objectStore.datasource));
-        instance.setCreateTable(config.objectStore.createTable);
-        instance.setDropTable(config.objectStore.dropTable);
-        instance.setTablePrefix(config.objectStore.tablePrefix);
+        instance.setJdbcDataSource(new QuarkusDataSource(config.objectStore().datasource()));
+        instance.setCreateTable(config.objectStore().createTable());
+        instance.setDropTable(config.objectStore().dropTable());
+        instance.setTablePrefix(config.objectStore().tablePrefix());
     }
 
-    public void startRecoveryService(final TransactionManagerConfiguration transactions,
-            Map<String, String> configuredDataSourcesConfigKeys,
+    public void startRecoveryService(Map<String, String> configuredDataSourcesConfigKeys,
             Set<String> dataSourcesWithTransactionIntegration) {
 
-        if (transactions.objectStore.type.equals(ObjectStoreType.JDBC)) {
+        if (transactions.getValue().objectStore().type().equals(ObjectStoreType.JDBC)) {
             final String objectStoreDataSourceName;
-            if (transactions.objectStore.datasource.isEmpty()) {
+            if (transactions.getValue().objectStore().datasource().isEmpty()) {
                 if (!DataSourceUtil.hasDefault(configuredDataSourcesConfigKeys.keySet())) {
                     throw new ConfigurationException(
                             "The Narayana JTA extension does not have a datasource configured as the JDBC object store,"
@@ -176,7 +182,7 @@ public class NarayanaJtaRecorder {
                 }
                 objectStoreDataSourceName = DataSourceUtil.DEFAULT_DATASOURCE_NAME;
             } else {
-                objectStoreDataSourceName = transactions.objectStore.datasource.get();
+                objectStoreDataSourceName = transactions.getValue().objectStore().datasource().get();
 
                 if (!configuredDataSourcesConfigKeys.keySet().contains(objectStoreDataSourceName)) {
                     throw new ConfigurationException(
@@ -200,15 +206,15 @@ public class NarayanaJtaRecorder {
                         objectStoreDataSourceName, configuredDataSourcesConfigKeys.get(objectStoreDataSourceName)));
             }
         }
-        if (transactions.enableRecovery) {
+        if (transactions.getValue().enableRecovery()) {
             QuarkusRecoveryService.getInstance().create();
             QuarkusRecoveryService.getInstance().start();
         }
     }
 
-    public void handleShutdown(ShutdownContext context, TransactionManagerConfiguration transactions) {
+    public void handleShutdown(ShutdownContext context) {
         context.addShutdownTask(() -> {
-            if (transactions.enableRecovery) {
+            if (transactions.getValue().enableRecovery()) {
                 try {
                     QuarkusRecoveryService.getInstance().stop();
                 } catch (Exception e) {
